# perplexity_search

./: CHANGELOG.md  LICENSE  LLM_DEV_NOTES.md  README.md  example.env  get_changes.py  perplexity_search.py  pyproject.toml  requirements.txt  run_tests_and_fix_2.py  setup.py
plexsearch/: __init__.py  api.py  cli.py  client.py  config.py  context.py  core.py  exceptions.py  formatter.py  prompts.py  update_checker.py
plexsearch/plexsearch/: __init__.py
src/plexsearch/: core.py
tests/: conftest.py  test_api.py  test_config.py  test_context.py  test_core.py  test_get_changes.py  test_integration.py  test_plexsearch.py  test_terminal.py  test_update_checker.py
