[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plexsearch"
version = "0.1.0"
description = "A powerful Python tool for performing technical searches using the Perplexity API"
readme = "README.md"
authors = [{ name = "Tom Doerr" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["search", "perplexity", "ai", "llm"]
dependencies = [
    "requests>=2.25.0",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/tom-doerr/perplexity_search"

[project.scripts]
plexsearch = "plexsearch.core:main"
